--- a/src/components/DenominationItem/index.css
+++ b/src/components/DenominationItem/index.css
@@ -1,3 +1,4 @@
+/* Write your CSS here */
 .btn {
   background-color: #382f5a;
   border-color: #c4c4c4;
@@ -9,5 +10,4 @@
   width: 150px;
   margin-right: 20px;
   margin-bottom: 20px;
-  cursor: pointer;
 }
